@@ -234,7 +234,8 @@ struct IRState : IRBase
 
   // Create a SAVE_EXPR if 't' might have unwanted side effects if referenced
   // more than once in an expression.
-  tree maybeMakeTemp (tree t);
+  static tree makeTemp (tree t);
+  static tree maybeMakeTemp (tree t);
 
   // Return true if t can be evaluated multiple times (i.e., in a loop body)
   // without unwanted side effects.  This is a stronger test than
